--- a/changelog.html
+++ b/changelog.html
@@ -75,23 +75,23 @@
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
                         <h5>Home Pages</h5>
-                    </div><a href="about.html" aria-current="page" class="footer-link w--current">About</a><a
-                        href="mentorship.html" class="footer-link">Services</a><a href="courses.html"
+                    </div><a href="about" aria-current="page" class="footer-link w--current">About</a><a
+                        href="mentorship" class="footer-link">Services</a><a href="courses"
                         class="footer-link">Courses
                     </a>
                 </div>
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
                         <h5>Other Pages</h5>
-                    </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                        class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
+                    </div><a href="workshop" class="footer-link">Workshop</a><a href="contact"
+                        class="footer-link">Contact</a><a href="password-reset" class="footer-link">Password
                         Reset</a>
                 </div>
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
                         <h5>Internal Pages</h5>
-                    </div><a href="intern.html" class="footer-link">Internships</a><a href="website-T&C.pdf"
-                        class="footer-link">Terms & Conditions</a><a href="changelog.html"
+                    </div><a href="intern" class="footer-link">Internships</a><a href="website-T&C.pdf"
+                        class="footer-link">Terms & Conditions</a><a href="changelog"
                         class="footer-link">Changelog</a>
                 </div>
             </div>
