--- a/intern.html
+++ b/intern.html
@@ -123,7 +123,7 @@
                                 <div class="dropdown-list-full-wrapper">
                                     <div class="navigation-drop-container">
                                         <div class="navigation-column">
-                                            <a href="courses.html" aria-current="page"
+                                            <a href="courses" aria-current="page"
                                                 class="navigation-link-block-mob w-inline-block w--current">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Foundation</div>
@@ -134,7 +134,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="courses" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Specialization</div>
                                                     <div class="nav-link-details">Congeal Entrepreneurial Capability
@@ -144,7 +144,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="courses" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">IEDC</div>
                                                     <div class="nav-link-details">Innovation and Entrepreneurial
@@ -165,7 +165,7 @@
                                 <div class="dropdown-list-full-wrapper">
                                     <div class="navigation-drop-container">
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Mentorship</div>
                                                     <div class="nav-link-details">100% free mentorship and guidence
@@ -175,7 +175,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="workshop.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="workshop" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Workshop</div>
                                                     <div class="nav-link-details">Academic Workshop for students
@@ -185,7 +185,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="intern.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="intern" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Internship</div>
                                                     <div class="nav-link-details">Get Paid internship by One Up for
@@ -207,7 +207,7 @@
                                 <div class="dropdown-list-full-wrapper">
                                     <div class="navigation-drop-container">
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Validation Phase</div>
                                                     <div class="nav-link-details">Know your potential customers.
@@ -216,7 +216,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Launch Phase</div>
                                                     <div class="nav-link-details">Create products/ services that
@@ -227,7 +227,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Traction Phase</div>
                                                     <div class="nav-link-details">Create a stable base of early
@@ -239,12 +239,12 @@
                                 </div>
                             </nav>
                         </div>
-                </div><a href="about.html" class="nav-link w-nav-link">About</a>
-                <a href="contact.html" class="nav-link w-nav-link">Contact</a>
+                </div><a href="about" class="nav-link w-nav-link">About</a>
+                <a href="contact" class="nav-link w-nav-link">Contact</a>
                 </nav>
             </div>
-            <!--<div class="navigation-right"><a href="login.html" class="nav-link w-nav-link">Log In</a>
-                    <a href="register.html" class="button _12-px-padding nav-button w-button">Register</a>
+            <!--<div class="navigation-right"><a href="login" class="nav-link w-nav-link">Log In</a>
+                    <a href="register" class="button _12-px-padding nav-button w-button">Register</a>
                 </div>-->
         </div>
     </div>
@@ -260,7 +260,7 @@
                             <div>Courses</div>
                         </div>
                         <nav class="dropdown-list-mob w-dropdown-list">
-                            <a href="courses.html" aria-current="page"
+                            <a href="courses" aria-current="page"
                                 class="navigation-link-block-mob w-inline-block w--current">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Foundation</div>
@@ -268,14 +268,14 @@
                                         preparatory course starting from the level zero.</div>
                                 </div>
                             </a>
-                            <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="courses" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Specialization</div>
                                     <div class="nav-link-detail">Congeal Entrepreneurial Capability and
                                         Effectiveness: Dynamic course for Startups.</div>
                                 </div>
                             </a>
-                            <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="courses" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">IEDC</div>
                                     <div class="nav-link-detail">Innovation and Entrepreneurial Development Center:
@@ -290,21 +290,21 @@
                             <div>Services</div>
                         </div>
                         <nav class="dropdown-list-mob w-dropdown-list">
-                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Mentorship</div>
                                     <div class="nav-link-detail">100% free mentorship and guidence for preparation,
                                         negotiation, expansion & exit.</div>
                                 </div>
                             </a>
-                            <a href="workshop.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="workshop" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Workshop</div>
                                     <div class="nav-link-detail">Academic Workshop for students related to
                                         entrepreneurial work.</div>
                                 </div>
                             </a>
-                            <a href="intern.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="intern" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Internship</div>
                                     <div class="nav-link-detail">Get Paid internship by One Up for the winners of
@@ -319,21 +319,21 @@
                             <div>Mentorship</div>
                         </div>
                         <nav class="dropdown-list-mob w-dropdown-list">
-                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Validation Phase</div>
                                     <div class="nav-link-detail">Know your potential customers. Prototype solutions
                                         & business models.</div>
                                 </div>
                             </a>
-                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Launch Phase</div>
                                     <div class="nav-link-detail">Create products/ services that will delight
                                         customers. Launch and sustain the venture.</div>
                                 </div>
                             </a>
-                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                 <div class="nav-content-wrap">
                                     <div class="nav-text">Traction Phase</div>
                                     <div class="nav-link-detail">Create a stable base of early customers. Manage
@@ -341,9 +341,9 @@
                                 </div>
                             </a>
                         </nav>
-                    </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><a href="contact.html"
-                        class="mobile-nav-link w-nav-link">Contact</a><a href="login.html" target="_blank"
-                        class="mobile-nav-link w-nav-link">Log In</a><a href="register.html" target="_blank"
+                    </div><a href="about" class="mobile-nav-link w-nav-link">About</a><a href="contact"
+                        class="mobile-nav-link w-nav-link">Contact</a><a href="login" target="_blank"
+                        class="mobile-nav-link w-nav-link">Log In</a><a href="register" target="_blank"
                         class="button _12-px-padding nav-button w-button">Register</a>
                 </div>
             </nav>
@@ -473,8 +473,8 @@
                 form.addEventListener("submit", (e) => {
                     e.preventDefault();
                     fetch(scriptURL, { method: "POST", body: new FormData(form) })
-                    .then(response => $("#form-alerts").html("<div class='alert alert-success'>Thank you! Your submission has been received!</div>"))
-                    .catch(error => $("#form-alerts").html("<div class='alert alert-danger'>Oops! Something went wrong while submitting the form.</div>"))
+                    .then(response => $("#form-alerts")("<div class='alert alert-success'>Thank you! Your submission has been received!</div>"))
+                    .catch(error => $("#form-alerts")("<div class='alert alert-danger'>Oops! Something went wrong while submitting the form.</div>"))
                 });
             </script>
             <div data-w-id="ebcbde33-b5ba-2226-0b90-93bcc3b71efa" class="home-3-arrow"><img
@@ -508,23 +508,23 @@
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
                             <h5>Home Pages</h5>
-                        </div><a href="about.html" aria-current="page" class="footer-link w--current">About</a><a
-                            href="mentorship.html" class="footer-link">Services</a><a href="courses.html"
+                        </div><a href="about" aria-current="page" class="footer-link w--current">About</a><a
+                            href="mentorship" class="footer-link">Services</a><a href="courses"
                             class="footer-link">Courses
                         </a>
                     </div>
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
                             <h5>Other Pages</h5>
-                        </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                            class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
+                        </div><a href="workshop" class="footer-link">Workshop</a><a href="contact"
+                            class="footer-link">Contact</a><a href="password-reset" class="footer-link">Password
                             Reset</a>
                     </div>
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
                             <h5>Internal Pages</h5>
-                        </div><a href="intern.html" class="footer-link">Internships</a><a href="website-T&C.pdf"
-                            class="footer-link">Terms & Conditions</a><a href="changelog.html"
+                        </div><a href="intern" class="footer-link">Internships</a><a href="website-T&C.pdf"
+                            class="footer-link">Terms & Conditions</a><a href="changelog"
                             class="footer-link">Changelog</a>
                     </div>
                 </div>
