--- a/password-reset.html
+++ b/password-reset.html
@@ -68,8 +68,8 @@
         form.addEventListener("submit", (e) => {
             e.preventDefault();
             fetch(scriptURL, { method: "POST", body: new FormData(form) })
-            .then(response => $("#form-alerts").html("<div class='alert alert-success'>Thank you! Your submission has been received!</div>"))
-            .catch(error => $("#form-alerts").html("<div class='alert alert-danger'>Oops! Something went wrong while submitting the form.</div>"))
+            .then(response => $("#form-alerts")("<div class='alert alert-success'>Thank you! Your submission has been received!</div>"))
+            .catch(error => $("#form-alerts")("<div class='alert alert-danger'>Oops! Something went wrong while submitting the form.</div>"))
         });
     </script>
     <div class="footer black wf-section">
