--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
                     <svg id="astronaut-error"></svg>
                     <h1 class="no-found">Page Not Found</h1>
                     <p class="error-text">The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-                    <a href="index.html" class="btn"><i class="uf uf-arrow-left"></i>Go back</a>
+                    <a href="index" class="btn"><i class="uf uf-arrow-left"></i>Go back</a>
                 </div>
             </div>
             <!-- End row  -->
