--- a/login.html
+++ b/login.html
@@ -34,11 +34,11 @@
                             class="form-field-label-text">Password</label><input type="password"
                             class="form-field w-input" maxlength="50" name="password" data-name="password"
                             id="password" required="" /></div>
-                    <div class="forward-password-text-16px"><a href="password-reset.html" target="_blank"
+                    <div class="forward-password-text-16px"><a href="password-reset" target="_blank"
                             class="forgot-password">Forgot password?</a></div><input type="submit" value="Log in"
                         data-wait="Please wait..." class="submit-green-button w-button" onclick="SignIn()"/>
                     <div class="form-text-block-16px"><span class="white-text-opacity-50">Don’t have an
-                            account?</span> <a href="register.html" class="register-link">Register</a></div>
+                            account?</span> <a href="register" class="register-link">Register</a></div>
                 </form>
                 <div class="success-message w-form-done">
                     <div>Thank you! Your submission has been received!</div>
@@ -76,23 +76,23 @@
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
                             <h5>Home Pages</h5>
-                        </div><a href="about.html" aria-current="page" class="footer-link w--current">About</a><a
-                            href="mentorship.html" class="footer-link">Services</a><a href="courses.html"
+                        </div><a href="about" aria-current="page" class="footer-link w--current">About</a><a
+                            href="mentorship" class="footer-link">Services</a><a href="courses"
                             class="footer-link">Courses
                         </a>
                     </div>
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
                             <h5>Other Pages</h5>
-                        </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                            class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
+                        </div><a href="workshop" class="footer-link">Workshop</a><a href="contact"
+                            class="footer-link">Contact</a><a href="password-reset" class="footer-link">Password
                             Reset</a>
                     </div>
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
                             <h5>Internal Pages</h5>
-                        </div><a href="intern.html" class="footer-link">Internships</a><a href="website-T&C.pdf"
-                            class="footer-link">Terms & Conditions</a><a href="changelog.html"
+                        </div><a href="intern" class="footer-link">Internships</a><a href="website-T&C.pdf"
+                            class="footer-link">Terms & Conditions</a><a href="changelog"
                             class="footer-link">Changelog</a>
                     </div>
                 </div>
