--- a/mentorship.html
+++ b/mentorship.html
@@ -50,7 +50,7 @@
                                 <div class="dropdown-list-full-wrapper">
                                     <div class="navigation-drop-container">
                                         <div class="navigation-column">
-                                            <a href="courses.html" aria-current="page"
+                                            <a href="courses" aria-current="page"
                                                 class="navigation-link-block-mob w-inline-block w--current">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Foundation</div>
@@ -61,7 +61,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="courses" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Specialization</div>
                                                     <div class="nav-link-details">Congeal Entrepreneurial Capability and
@@ -70,7 +70,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="courses" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">IEDC</div>
                                                     <div class="nav-link-details">Innovation and Entrepreneurial
@@ -91,7 +91,7 @@
                                 <div class="dropdown-list-full-wrapper">
                                     <div class="navigation-drop-container">
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Mentorship</div>
                                                     <div class="nav-link-details">100% free mentorship and guidence for
@@ -100,7 +100,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="workshop.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="workshop" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Workshop</div>
                                                     <div class="nav-link-details">Academic Workshop for students related
@@ -109,7 +109,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="intern.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="intern" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Internship</div>
                                                     <div class="nav-link-details">Get Paid internship by One Up for the
@@ -130,7 +130,7 @@
                                 <div class="dropdown-list-full-wrapper">
                                     <div class="navigation-drop-container">
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Validation Phase</div>
                                                     <div class="nav-link-details">Know your potential customers.
@@ -139,7 +139,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Launch Phase</div>
                                                     <div class="nav-link-details">Create products/ services that will
@@ -149,7 +149,7 @@
                                             </a>
                                         </div>
                                         <div class="navigation-column">
-                                            <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                            <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                                 <div class="nav-content-wrap">
                                                     <div class="nav-title">Traction Phase</div>
                                                     <div class="nav-link-details">Create a stable base of early
@@ -161,11 +161,11 @@
                                 </div>
                             </nav>
                         </div>
-                </div><a href="about.html" class="nav-link w-nav-link">About</a>
-                <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
+                </div><a href="about" class="nav-link w-nav-link">About</a>
+                <!--<a href="contact" class="nav-link w-nav-link">Contact</a>-->
                 </nav>
-                <div class="navigation-right"><!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
-                    <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
+                <div class="navigation-right"><!--<a href="login" class="nav-link w-nav-link">Log In</a>-->
+                    <a href="contact" class="button _12-px-padding nav-button w-button">Contact</a>
                 </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
                                 <div>Courses</div>
                             </div>
                             <nav class="dropdown-list-mob w-dropdown-list">
-                                <a href="courses.html" aria-current="page"
+                                <a href="courses" aria-current="page"
                                     class="navigation-link-block-mob w-inline-block w--current">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Foundation</div>
@@ -189,14 +189,14 @@
                                             preparatory course starting from the level zero.</div>
                                     </div>
                                 </a>
-                                <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="courses" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Specialization</div>
                                         <div class="nav-link-detail">Congeal Entrepreneurial Capability and
                                             Effectiveness: Dynamic course for Startups.</div>
                                     </div>
                                 </a>
-                                <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="courses" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">IEDC</div>
                                         <div class="nav-link-detail">Innovation and Entrepreneurial Development Center:
@@ -211,21 +211,21 @@
                                 <div>Services</div>
                             </div>
                             <nav class="dropdown-list-mob w-dropdown-list">
-                                <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Mentorship</div>
                                         <div class="nav-link-detail">100% free mentorship and guidence for preparation,
                                             negotiation, expansion & exit.</div>
                                     </div>
                                 </a>
-                                <a href="workshop.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="workshop" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Workshop</div>
                                         <div class="nav-link-detail">Academic Workshop for students related to
                                             entrepreneurial work.</div>
                                     </div>
                                 </a>
-                                <a href="intern.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="intern" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Internship</div>
                                         <div class="nav-link-detail">Get Paid internship by One Up for the winners of
@@ -240,21 +240,21 @@
                                 <div>Mentorship</div>
                             </div>
                             <nav class="dropdown-list-mob w-dropdown-list">
-                                <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Validation Phase</div>
                                         <div class="nav-link-detail">Know your potential customers. Prototype solutions
                                             & business models.</div>
                                     </div>
                                 </a>
-                                <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Launch Phase</div>
                                         <div class="nav-link-detail">Create products/ services that will delight
                                             customers. Launch and sustain the venture.</div>
                                     </div>
                                 </a>
-                                <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                                <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                                     <div class="nav-content-wrap">
                                         <div class="nav-text">Traction Phase</div>
                                         <div class="nav-link-detail">Create a stable base of early customers. Manage
@@ -262,9 +262,9 @@
                                     </div>
                                 </a>
                             </nav>
-                        </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact.html"
-                            class="mobile-nav-link w-nav-link">Contact</a><a href="login.html" target="_blank"
-                            class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact.html" target="_blank"
+                        </div><a href="about" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact"
+                            class="mobile-nav-link w-nav-link">Contact</a><a href="login" target="_blank"
+                            class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact" target="_blank"
                             class="button _12-px-padding nav-button w-button">Contact</a>
                     </div>
                 </nav>
@@ -386,7 +386,7 @@
                     <div data-w-id="9558b870-7a24-cf04-8611-539c577b7ee0" style="opacity:0"
                         class="home-2-revenue-text-wrapper">
                         <div>Create a clear visual manifestation of your brand while bringing your product or service to life.</div>
-                    </div><a data-w-id="0f0b138e-0f12-de1c-8bde-9c09947b08b7" style="opacity:0" href="courses.html" target="_blank"
+                    </div><a data-w-id="0f0b138e-0f12-de1c-8bde-9c09947b08b7" style="opacity:0" href="courses" target="_blank"
                         class="button _12-px-padding w-button">Explore</a>
                 </div>
             </div>
@@ -534,7 +534,7 @@
                     <div data-w-id="9558b870-7a24-cf04-8611-539c577b7ee0" style="opacity:0"
                         class="home-2-revenue-text-wrapper">
                         <div>Nail down your brand strategy, story, positioning, messaging, and visual language.</div>
-                    </div><a data-w-id="0f0b138e-0f12-de1c-8bde-9c09947b08b7" style="opacity:0" href="partner.html" target="_blank"
+                    </div><a data-w-id="0f0b138e-0f12-de1c-8bde-9c09947b08b7" style="opacity:0" href="partner" target="_blank"
                         class="button _12-px-padding w-button">Join Us</a>
                     <div data-w-id="6d6018aa-7081-378c-82fd-a2c8c37b8d26" style="opacity:0"
                         class="home-2-revenue-benefits">
@@ -742,7 +742,7 @@
                 <div data-w-id="f77b52ea-3c94-c3d5-958a-5182ebb9ea55" style="opacity:0"
                     class="home-2-integrations-heading-wrapper">
                     <h2><strong>Create Your Own Startup with One Up</strong></h2>
-                </div><a data-w-id="ba3e80ba-c7fc-4eab-2ced-3ac1ce806525" style="opacity:0" href="contact.html"
+                </div><a data-w-id="ba3e80ba-c7fc-4eab-2ced-3ac1ce806525" style="opacity:0" href="contact"
                     target="_blank" class="button w-button">Contact Us</a>
                 <div data-w-id="b23fb955-d0bf-9969-552b-068fe826f6ac" class="home-2-integration-floating-1"><img
                         src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606c4f9894eddebfb3d6ad01_Group%20913.png"
@@ -804,23 +804,23 @@
                         <div class="footer-column">
                             <div class="footer-column-heading-wrapper">
                                 <h5>Home Pages</h5>
-                            </div><a href="about.html" aria-current="page" class="footer-link w--current">About</a><a
-                                href="mentorship.html" class="footer-link">Services</a><a href="courses.html" class="footer-link">Courses
+                            </div><a href="about" aria-current="page" class="footer-link w--current">About</a><a
+                                href="mentorship" class="footer-link">Services</a><a href="courses" class="footer-link">Courses
                             </a>
                         </div>
                         <div class="footer-column">
                             <div class="footer-column-heading-wrapper">
                                 <h5>Other Pages</h5>
-                            </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                                class="footer-link">Contact</a><a href="mentorship.html"
+                            </div><a href="workshop" class="footer-link">Workshop</a><a href="contact"
+                                class="footer-link">Contact</a><a href="mentorship"
                                 class="footer-link">Mentorship</a>
                         </div>
                         <div class="footer-column">
                             <div class="footer-column-heading-wrapper">
                                 <h5>Internal Pages</h5>
-                            </div><a href="intern.html" class="footer-link">Internships</a><a
+                            </div><a href="intern" class="footer-link">Internships</a><a
                                 href="website-T&C.pdf" class="footer-link">Terms & Conditions</a><a
-                                href="changelog.html" class="footer-link">Changelog</a>
+                                href="changelog" class="footer-link">Changelog</a>
                         </div>
                     </div>
                 </div>
