--- a/page2.html
+++ b/page2.html
@@ -65,7 +65,7 @@
                   <div class="dropdown-list-full-wrapper">
                     <div class="navigation-drop-container">
                       <div class="navigation-column">
-                        <a href="courses.html" aria-current="page"
+                        <a href="courses" aria-current="page"
                           class="navigation-link-block-mob w-inline-block w--current">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Foundation</div>
@@ -77,7 +77,7 @@
                         </a>
                       </div>
                       <div class="navigation-column">
-                        <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="courses" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Specialization</div>
                             <div class="nav-link-details">
@@ -88,7 +88,7 @@
                         </a>
                       </div>
                       <div class="navigation-column">
-                        <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="courses" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">IEDC</div>
                             <div class="nav-link-details">
@@ -111,7 +111,7 @@
                   <div class="dropdown-list-full-wrapper">
                     <div class="navigation-drop-container">
                       <div class="navigation-column">
-                        <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Mentorship</div>
                             <div class="nav-link-details">
@@ -122,7 +122,7 @@
                         </a>
                       </div>
                       <div class="navigation-column">
-                        <a href="workshop.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="workshop" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Workshop</div>
                             <div class="nav-link-details">
@@ -133,7 +133,7 @@
                         </a>
                       </div>
                       <div class="navigation-column">
-                        <a href="intern.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="intern" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Internship</div>
                             <div class="nav-link-details">
@@ -156,7 +156,7 @@
                   <div class="dropdown-list-full-wrapper">
                     <div class="navigation-drop-container">
                       <div class="navigation-column">
-                        <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Validation Phase</div>
                             <div class="nav-link-details">
@@ -167,7 +167,7 @@
                         </a>
                       </div>
                       <div class="navigation-column">
-                        <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Launch Phase</div>
                             <div class="nav-link-details">
@@ -178,7 +178,7 @@
                         </a>
                       </div>
                       <div class="navigation-column">
-                        <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                        <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                           <div class="nav-content-wrap">
                             <div class="nav-title">Traction Phase</div>
                             <div class="nav-link-details">
@@ -192,13 +192,13 @@
                   </div>
                 </nav>
               </div>
-              <a href="about.html" class="nav-link w-nav-link">About</a>
-              <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
+              <a href="about" class="nav-link w-nav-link">About</a>
+              <!--<a href="contact" class="nav-link w-nav-link">Contact</a>-->
             </nav>
           </div>
           <div class="navigation-right">
-            <!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
-            <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
+            <!--<a href="login" class="nav-link w-nav-link">Log In</a>-->
+            <a href="contact" class="button _12-px-padding nav-button w-button">Contact</a>
           </div>
         </div>
       </div>
@@ -216,7 +216,7 @@
                   <div>Courses</div>
                 </div>
                 <nav class="dropdown-list-mob w-dropdown-list">
-                  <a href="courses.html" aria-current="page"
+                  <a href="courses" aria-current="page"
                     class="navigation-link-block-mob w-inline-block w--current">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Foundation</div>
@@ -226,7 +226,7 @@
                       </div>
                     </div>
                   </a>
-                  <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="courses" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Specialization</div>
                       <div class="nav-link-detail">
@@ -235,7 +235,7 @@
                       </div>
                     </div>
                   </a>
-                  <a href="courses.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="courses" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">IEDC</div>
                       <div class="nav-link-detail">
@@ -252,7 +252,7 @@
                   <div>Services</div>
                 </div>
                 <nav class="dropdown-list-mob w-dropdown-list">
-                  <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Mentorship</div>
                       <div class="nav-link-detail">
@@ -261,7 +261,7 @@
                       </div>
                     </div>
                   </a>
-                  <a href="workshop.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="workshop" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Workshop</div>
                       <div class="nav-link-detail">
@@ -270,7 +270,7 @@
                       </div>
                     </div>
                   </a>
-                  <a href="intern.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="intern" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Internship</div>
                       <div class="nav-link-detail">
@@ -287,7 +287,7 @@
                   <div>Mentorship</div>
                 </div>
                 <nav class="dropdown-list-mob w-dropdown-list">
-                  <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Validation Phase</div>
                       <div class="nav-link-detail">
@@ -296,7 +296,7 @@
                       </div>
                     </div>
                   </a>
-                  <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Launch Phase</div>
                       <div class="nav-link-detail">
@@ -305,7 +305,7 @@
                       </div>
                     </div>
                   </a>
-                  <a href="mentorship.html" class="navigation-link-block-mob w-inline-block">
+                  <a href="mentorship" class="navigation-link-block-mob w-inline-block">
                     <div class="nav-content-wrap">
                       <div class="nav-text">Traction Phase</div>
                       <div class="nav-link-detail">
@@ -316,9 +316,9 @@
                   </a>
                 </nav>
               </div>
-              <a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact.html"
-                class="mobile-nav-link w-nav-link">Contact</a><a href="login.html" target="_blank"
-                class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact.html" target="_blank"
+              <a href="about" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact"
+                class="mobile-nav-link w-nav-link">Contact</a><a href="login" target="_blank"
+                class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact" target="_blank"
                 class="button _12-px-padding nav-button w-button">Contact</a>
             </div>
           </nav>
@@ -334,7 +334,7 @@
       <div class="latest-blog-collection-list-wrapper w-dyn-list">
         <div role="list" class="w-dyn-items">
           <div role="listitem" class="w-dyn-item">
-            <a data-w-id="2f526e64-a575-5a15-a0bc-dbe4a19f7d3a" href="enroll.html" class="latest-blog w-inline-block">
+            <a data-w-id="2f526e64-a575-5a15-a0bc-dbe4a19f7d3a" href="enroll" class="latest-blog w-inline-block">
               <div class="blog-latest-image">
                 <img src="assets/img/startup-con.webp" loading="lazy" alt="Masterclass at Speed"
                   sizes="(max-width: 767px) 90vw, (max-width: 1439px) 40vw, 545.1875px"
@@ -372,7 +372,7 @@
       <div class="w-dyn-list">
         <div role="list" class="blog-collection-list w-dyn-items">
           <div role="listitem" class="blog-collection-item w-dyn-item">
-            <a href="enroll.html" class="blog w-inline-block">
+            <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
                   <img src="assets/img/conference.webp" loading="lazy" alt="Investor Pitch"
@@ -404,7 +404,7 @@
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
-            <a href="enroll.html" class="blog w-inline-block">
+            <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
                   <img src="assets/img/d&i.webp" loading="lazy" alt="Design Thinking"
@@ -434,7 +434,7 @@
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
-            <a href="enroll.html" class="blog w-inline-block">
+            <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
                   <img src="assets/img/nirvana-conference.jpeg" loading="lazy" alt="Nirvana Conference"
@@ -466,7 +466,7 @@
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
-            <a href="enroll.html" class="blog w-inline-block">
+            <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
                   <img src="assets/img/lean_canvas.jpeg" loading="lazy" alt=""
@@ -496,7 +496,7 @@
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
-            <a href="enroll.html" class="blog w-inline-block">
+            <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
                   <img src="assets/img/mvp.webp" loading="lazy" alt="MVP" class="image hover-scale-animation" />
@@ -524,7 +524,7 @@
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
-            <a href="enroll.html" class="blog w-inline-block">
+            <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
                   <img src="assets/img/managerial economics.webp" loading="lazy" alt="Economics"
@@ -555,12 +555,12 @@
           </div>
         </div>
         <div role="navigation" aria-label="List" class="w-pagination-wrapper">
-          <a href="courses.html" aria-label="Previous Page" class="w-pagination-previous button _12-px-padding">
+          <a href="courses" aria-label="Previous Page" class="w-pagination-previous button _12-px-padding">
             <div class="white w-inline-block">Previous</div>
-          </a><a href="page3.html" aria-label="Next Page" class="w-pagination-next button _12-px-padding">
+          </a><a href="page3" aria-label="Next Page" class="w-pagination-next button _12-px-padding">
             <div class="white w-inline-block">Next</div>
           </a>
-          <link rel="prerender" href="page3.html" />
+          <link rel="prerender" href="page3" />
         </div>
       </div>
     </div>
@@ -590,23 +590,23 @@
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
                         <h5>Home Pages</h5>
-                    </div><a href="about.html" aria-current="page" class="footer-link w--current">About</a><a
-                        href="mentorship.html" class="footer-link">Services</a><a href="courses.html"
+                    </div><a href="about" aria-current="page" class="footer-link w--current">About</a><a
+                        href="mentorship" class="footer-link">Services</a><a href="courses"
                         class="footer-link">Courses
                     </a>
                 </div>
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
                         <h5>Other Pages</h5>
-                    </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                        class="footer-link">Contact</a><a href="mentorship.html" class="footer-link">Mentorship
+                    </div><a href="workshop" class="footer-link">Workshop</a><a href="contact"
+                        class="footer-link">Contact</a><a href="mentorship" class="footer-link">Mentorship
                         </a>
                 </div>
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
                         <h5>Internal Pages</h5>
-                    </div><a href="intern.html" class="footer-link">Internships</a><a href="website-T&C.pdf"
-                        class="footer-link">Terms & Conditions</a><a href="changelog.html"
+                    </div><a href="intern" class="footer-link">Internships</a><a href="website-T&C.pdf"
+                        class="footer-link">Terms & Conditions</a><a href="changelog"
                         class="footer-link">Changelog</a>
                 </div>
             </div>
